--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-beautifulsoup4
-requests
-validators
-lxml
-reportlab
-google-api-python-client
+streamlit==1.31.0
+requests==2.31.0
+beautifulsoup4==4.12.3
+validators==0.22.0
+google-api-python-client==2.115.0
+reportlab==4.0.9
+python-dotenv==1.0.1
+aiohttp==3.9.3
